src/app/fte-entry/employee/fte-entry.component.css
/* div.outer-cont {
  margin-left: 125px;
  margin-top: 100px;
  margin-bottom: 50px;
} */

div.col-custom.col-slider {
  padding: 0 10px;
}

.top-margin {
  margin-top: 75px;
}

.test-buttons {
  margin-top: 50px;
  text-align: center;
}


/* trash button icon */
i.fa-trash-o {
  font-size: 13pt;
  color: red;
}

i.fa-trash-o:hover {
  color: gray;
  cursor: pointer;
}


/* FTE Table CSS */
/* div.table-inner-cont {
  top: 0px;
  overflow-x: scroll;
} */

table {
  display: block;
  overflow: auto;
  height: 300px;
  width: 100%;
}

thead tr {
  left: 0;
  top: 0;
  height: 30px;
}

tfoot tr {
  left: 0;
  bottom: 0;
  height: 40px;
  z-index: 1;
}


thead tr th {
  /* using block display to separate header and footer
  to simulate fixed header and footer */
  position: sticky;
  top: 0px;
  z-index: 1;
}

tbody {
  z-index: 0;
}

tfoot tr td {
  position: sticky;
  bottom: 0px;
  /* z-index: 1; */
}

td, th, input {
  width:80px;
}

thead tr th.top-corner {
  z-index: 2;
}

thead tr th.icon, tbody tr td.icon, tfoot tr td.icon {
  /* using absolute positioning to simulate frozen
  first column */
  background-color: rgb(245, 245, 245);
  position: sticky;
  left: 0px;
  padding-top: 5px;
  min-width: 30px;
  max-width: 30px;
  width: 30px;
  min-height: 35px;
  z-index: 2;
}



th.firstColumnHeader, td.firstColumnHeader {
  /* using absolute positioning to simulate frozen
  first column */
  background-color: rgb(245, 245, 245);
  position: sticky;
  left: 30px;
  /* padding-top: 5px;
  padding-left: 30px; */
  min-width: 140px;
  min-height: 36px;
  z-index: 1;
}

th.firstColumnSpacer, td.firstColumnSpacer {
  /* because of absolute positioning above, need a spacer
  underneath to push table rows out from underneath the headers.
  margin and border-spacing don't work within td elements */
  /* min-width: 140px; */
}

input.fakeInput {
  /* due to misalignment between column headers and FTE values while using block display, I
  made the column headers also "input" boxes to get the same margin/border/padding/spacing
  variables as the FTE table */
  border: none;
  background-color: rgb(245, 245, 245);
  color: rgb(0,0,0);
  font-weight: bold;
  text-align: center;
}


/* th.header-project, th.header-month, td.col-project-name, td.totals-row-cell {
  background-color: rgb(245, 245, 245);
} */

/* TOTALS ROW */

/* table td.totals-row-cell {
  padding-top: 15px;
}

table td.col-total-name {
  position: relative;
  padding-right: 20px;
  left: -15px;
  z-index: 1;
} */

input.form-control.highlight-invalid {
  border-color: rgb(236, 154, 154);
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236, 154, 154, .6);
          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(236, 154, 154, .6);
}


/* TO-DO: COMMON STYLE - MOVE TO _SHARED */

input.form-control[disabled], select.form-control[disabled], textarea.form-control[disabled] {
  cursor: default;
  background-color: rgb(230, 230, 230);
}


.btn-primary {
  color: #fff;
  background-color: rgb(108, 117, 125);;
  border-color: rgb(108, 117, 125);;
}

